--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -16,6 +16,14 @@
   
   .header-nav__logo {
     margin-right: 93px;
+
+    // @media screen and (min-width:480px) {
+    //   .header-nav__logo {
+    //     color: var(--color-accent);
+    //   }
+      
+    // }
+  
   }
   
   .footer__logo {
