--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,7 +1,8 @@
 header {
     border-bottom: 1px solid #ececec;
-    display: block;
-    align-items: center;
+    // display: block;
+    // align-items: center;
+    // position: relative;
   }
     .header-nav {
       display: flex;
