--- a/scss/layout/_benefits.scss
+++ b/scss/layout/_benefits.scss
@@ -3,18 +3,31 @@
 }
 
 .benefits__inner {
-    width: 270px;
+
+   @media screen and (min-width:480px) {
+     width: 100%; 
+   }
+
+  @media screen and (min-width:767px) {
+    width: 270px; 
+  }
+   
   }
 
   .benefits__icon-inner {
-    display: flex;
-  
+    
+    width: 100%;
     height: 120px;
     background-color: var(--secondary-bg-color);
     border-radius: 4px;
     align-items: center;
     justify-content: center;
-    margin-bottom: 30px;
+   
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      margin-bottom: 30px;
+    }
   }
   
   .benefits__icon {
@@ -23,17 +36,29 @@
   }
   
   .benefits__inner:not(:last-child) {
+
+    @media screen and (min-width: 1200px) {
     margin-right: 30px;
+    }
+
   }
   
 .benefits__list {
+
+  
+  @media screen and (min-width: 1200px) {
     display: flex;
     margin-right: auto;
     margin-left: auto;
   }
+    
+  }
   
   .benefits__list:last-child {
-    margin-right: 0;
+    @media screen and (min-width: 767px) {
+      margin-right: 0;
+    }
+   
   }
   
   .benefits__title {
