--- a/css/main.css
+++ b/css/main.css
@@ -84,11 +84,25 @@ body {
 }
 
 .container {
-  max-width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .logo {
@@ -468,10 +482,127 @@ body {
   left: 24px;
 }
 
+.scope-card {
+  display: flex;
+}
+.scope-card__item {
+  position: relative;
+  margin-right: 30px;
+}
+.scope-card__item:last-child {
+  margin-right: 0;
+}
+.scope-card__set {
+  position: relative;
+}
+.scope-card__overley {
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  padding-top: 27px;
+  bottom: 0px;
+  left: 0;
+  text-align: center;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+.scope-card__text {
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-color);
+}
+
+.team-card {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  margin-top: -30px;
+  margin-right: -30px;
+}
+.team-card:last-child {
+  margin-right: 0;
+}
+.team-card__item {
+  background-color: var(--white-color);
+  flex-basis: calc((100% - 30px) / 4);
+  margin-top: 30px;
+  margin-right: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.team-card__item:last-child {
+  margin-right: 0px;
+}
+.team-card__content {
+  padding: 30px;
+  text-align: center;
+}
+.team-card__title {
+  margin-bottom: 10px;
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+}
+.team-card__text {
+  font-size: 16px;
+  line-height: 1.19;
+}
+.team-card__social {
+  display: flex;
+  margin-top: 16px;
+  margin-bottom: 0px;
+}
+.team-card__list {
+  margin-right: 10px;
+}
+.team-card__list:last-child {
+  margin-right: 0px;
+}
+
+.card {
+  margin-top: 50px;
+}
+
+.card .text {
+  margin-top: 10px;
+}
+
+.social__link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  transition: transform 250ms var(--timing-function), background-color 250ms var(--timing-function), fill 250ms var(--timing-function);
+}
+
+.social__link:hover,
+.social__link:focus {
+  background-color: var(--color-accent);
+  fill: var(--white-color);
+  transform: scale(1.2);
+}
+
+.social__link:hover .social__page,
+.social__link:focus .social__page {
+  fill: var(--white-color);
+}
+
+.social__page {
+  width: 20px;
+  height: 20px;
+  fill: var(--color-icon-fill);
+}
+
+.social__icon {
+  align-items: center;
+}
+
 header {
   border-bottom: 1px solid #ececec;
-  display: block;
-  align-items: center;
 }
 
 .header-nav {
@@ -587,18 +718,30 @@ header {
   line-height: 1.71;
 }
 
-.benefits__inner {
-  width: 270px;
+@media screen and (min-width: 480px) {
+  .benefits__inner {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 767px) {
+  .benefits__inner {
+    width: 270px;
+  }
 }
 
 .benefits__icon-inner {
-  display: flex;
+  width: 100%;
   height: 120px;
   background-color: var(--secondary-bg-color);
   border-radius: 4px;
   align-items: center;
   justify-content: center;
-  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .benefits__icon-inner {
+    display: flex;
+    margin-bottom: 30px;
+  }
 }
 
 .benefits__icon {
@@ -606,18 +749,24 @@ header {
   height: 70px;
 }
 
-.benefits__inner:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .benefits__inner:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
-.benefits__list {
-  display: flex;
-  margin-right: auto;
-  margin-left: auto;
+@media screen and (min-width: 1200px) {
+  .benefits__list {
+    display: flex;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 
-.benefits__list:last-child {
-  margin-right: 0;
+@media screen and (min-width: 767px) {
+  .benefits__list:last-child {
+    margin-right: 0;
+  }
 }
 
 .benefits__title {
@@ -631,128 +780,14 @@ header {
 .opportunities {
   padding-top: 0px;
 }
-
-.scope-card {
-  display: flex;
-}
-.scope-card__item {
-  position: relative;
-  margin-right: 30px;
-}
-.scope-card__item:last-child {
-  margin-right: 0;
-}
-.scope-card__set {
-  position: relative;
-}
-.scope-card__overley {
-  position: absolute;
-  width: 100%;
-  height: 70px;
-  padding-top: 27px;
-  bottom: 0px;
-  left: 0;
-  text-align: center;
-  background-color: rgba(47, 48, 58, 0.8);
-}
-.scope-card__text {
-  font-weight: 700;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--white-color);
+@media screen and (max-width: 767px) {
+  .opportunities {
+    display: none;
+  }
 }
 
 .section-team {
   background-color: var(--secondary-bg-color);
-}
-
-.team-card {
-  padding: 0;
-  list-style: none;
-  display: flex;
-  margin-top: -30px;
-  margin-right: -30px;
-}
-.team-card:last-child {
-  margin-right: 0;
-}
-.team-card__item {
-  background-color: var(--white-color);
-  flex-basis: calc((100% - 30px) / 4);
-  margin-top: 30px;
-  margin-right: 30px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-.team-card__item:last-child {
-  margin-right: 0px;
-}
-.team-card__content {
-  padding: 30px;
-  text-align: center;
-}
-.team-card__title {
-  margin-bottom: 10px;
-  color: var(--title-text-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-}
-.team-card__text {
-  font-size: 16px;
-  line-height: 1.19;
-}
-.team-card__social {
-  display: flex;
-  margin-top: 16px;
-  margin-bottom: 0px;
-}
-.team-card__list {
-  margin-right: 10px;
-}
-.team-card__list:last-child {
-  margin-right: 0px;
-}
-
-.card {
-  margin-top: 50px;
-}
-
-.card .text {
-  margin-top: 10px;
-}
-
-.social__link {
-  display: flex;
-  width: 44px;
-  height: 44px;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  transition: transform 250ms var(--timing-function), background-color 250ms var(--timing-function), fill 250ms var(--timing-function);
-}
-
-.social__link:hover,
-.social__link:focus {
-  background-color: var(--color-accent);
-  fill: var(--white-color);
-  transform: scale(1.2);
-}
-
-.social__link:hover .social__page,
-.social__link:focus .social__page {
-  fill: var(--white-color);
-}
-
-.social__page {
-  width: 20px;
-  height: 20px;
-  fill: var(--color-icon-fill);
-}
-
-.social__icon {
-  align-items: center;
 }
 
 .our-client {
