--- a/css/main.css
+++ b/css/main.css
@@ -106,18 +106,37 @@ body {
 }
 
 .logo {
-  color: var(--title-text-color);
   font-family: "Raleway";
-  font-size: 26px;
-  line-height: 1.2;
   text-decoration: none;
+}
+@media screen and (min-width: 480px) {
+  .logo {
+    color: var(--color-accent);
+    font-size: 24px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+  }
+}
+@media screen and (min-width: 768px) {
+  .logo {
+    color: var(--title-text-color);
+    font-size: 26px;
+    line-height: 1.2;
+  }
 }
 .logo__colortext {
   color: var(--color-accent);
 }
 
-.header-nav__logo {
-  margin-right: 93px;
+@media screen and (min-width: 480px) {
+  .header-nav__logo {
+    color: var(--color-accent);
+  }
+}
+@media screen and (min-width: 767px) {
+  .header-nav__logo {
+    margin-right: 93px;
+  }
 }
 
 .footer__logo {
@@ -513,26 +532,32 @@ body {
   color: var(--white-color);
 }
 
-.team-card {
-  padding: 0;
-  list-style: none;
-  display: flex;
-  margin-top: -30px;
-  margin-right: -30px;
-}
-.team-card:last-child {
-  margin-right: 0;
+@media screen and (min-width: 1200px) {
+  .team-card {
+    padding: 0;
+    list-style: none;
+    display: flex;
+    margin-top: -30px;
+    margin-right: -30px;
+  }
+  .team-card:last-child {
+    margin-right: 0;
+  }
 }
 .team-card__item {
-  background-color: var(--white-color);
-  flex-basis: calc((100% - 30px) / 4);
   margin-top: 30px;
-  margin-right: 30px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
 }
-.team-card__item:last-child {
-  margin-right: 0px;
+@media screen and (min-width: 1200px) {
+  .team-card__item {
+    background-color: var(--white-color);
+    flex-basis: calc((100% - 30px) / 4);
+    margin-right: 30px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
+  .team-card__item:last-child {
+    margin-right: 0px;
+  }
 }
 .team-card__content {
   padding: 30px;
@@ -545,14 +570,29 @@ body {
   font-size: 16px;
   line-height: 1.19;
 }
+@media screen and (min-width: 480px) {
+  .team-card__title {
+    letter-spacing: 0.03em;
+  }
+}
 .team-card__text {
   font-size: 16px;
   line-height: 1.19;
+}
+@media screen and (min-width: 480px) {
+  .team-card__text {
+    letter-spacing: 0.03em;
+  }
 }
 .team-card__social {
   display: flex;
   margin-top: 16px;
   margin-bottom: 0px;
+}
+@media screen and (min-width: 480px) {
+  .team-card__social {
+    justify-content: center;
+  }
 }
 .team-card__list {
   margin-right: 10px;
@@ -603,6 +643,9 @@ body {
 
 header {
   border-bottom: 1px solid #ececec;
+  display: block;
+  align-items: center;
+  position: relative;
 }
 
 .header-nav {
@@ -713,17 +756,47 @@ header {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpa), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(/img/Img_hero@2x.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .benefits {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
 
 .benefits__text {
   line-height: 1.71;
+}
+@media screen and (min-width: 480px) {
+  .benefits__text {
+    letter-spacing: 0.03em;
+    margin-top: 10px;
+  }
 }
 
 @media screen and (min-width: 480px) {
   .benefits__inner {
     width: 100%;
   }
+  .benefits__inner:not(:first-child) {
+    margin-top: 30px;
+  }
 }
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
+  .benefits__inner {
+    width: calc((100% - 60px) / 2);
+    margin: 15px;
+  }
+}
+@media screen and (min-width: 1200px) {
   .benefits__inner {
     width: 270px;
   }
@@ -734,6 +807,8 @@ header {
   height: 120px;
   background-color: var(--secondary-bg-color);
   border-radius: 4px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   align-items: center;
   justify-content: center;
 }
@@ -755,17 +830,21 @@ header {
   }
 }
 
+@media screen and (min-width: 480px) {
+  .benefits__list {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .benefits__list {
+    margin: -15px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .benefits__list {
     display: flex;
     margin-right: auto;
     margin-left: auto;
-  }
-}
-
-@media screen and (min-width: 767px) {
-  .benefits__list:last-child {
-    margin-right: 0;
   }
 }
 
@@ -776,11 +855,18 @@ header {
   line-height: 1.14;
   text-transform: uppercase;
 }
+@media screen and (min-width: 480px) {
+  .benefits__title {
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-top: 30px;
+  }
+}
 
 .opportunities {
   padding-top: 0px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1200px) {
   .opportunities {
     display: none;
   }
@@ -788,6 +874,22 @@ header {
 
 .section-team {
   background-color: var(--secondary-bg-color);
+}
+@media screen and (min-width: 480px) {
+  .section-team {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .section-team__title {
+    font-size: 28px;
+    line-height: 1.18;
+    letter-spacing: 0.03em;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
 }
 
 .our-client {
