--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,12 +1,21 @@
 
   
   .logo {
-    
-    color: var(--title-text-color);
     font-family: 'Raleway';
+    text-decoration: none;
+
+  @media screen and (min-width: 480px) {
+    color: var(--color-accent);
+    font-size: 24px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+  }
+    
+  @media screen and (min-width: 768px) {
+    color: var(--title-text-color);
     font-size: 26px;
     line-height: 1.2;
-    text-decoration: none;
+  }
   
 
   &__colortext {
@@ -15,14 +24,15 @@
 }
   
   .header-nav__logo {
-    margin-right: 93px;
+    
 
-    // @media screen and (min-width:480px) {
-    //   .header-nav__logo {
-    //     color: var(--color-accent);
-    //   }
-      
-    // }
+    @media screen and (min-width: 480px) {
+       color: var(--color-accent);
+    }
+    
+    @media screen and (min-width: 767px) {
+    margin-right: 93px;
+    }
   
   }
   
