--- a/scss/components/_team-card.scss
+++ b/scss/components/_team-card.scss
@@ -1,4 +1,10 @@
 .team-card {
+  
+  @media screen and (min-width:480px) {
+    
+  }
+
+  @media screen and (min-width:1200px) {
     padding: 0;
     list-style: none;
   
@@ -10,21 +16,34 @@
   &:last-child {
     margin-right: 0;
   }
+
+  }
+   
   
   
   &__item {
+    margin-top: 30px;
+
+    @media screen and (min-width:480px) {
+    
+    }
+    @media screen and (min-width:1200px) {
+    
     background-color: var(--white-color);
     flex-basis: calc((100% - 30px) / 4);
-    margin-top: 30px;
+    
     margin-right: 30px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+
+    &:last-child {
+      margin-right: 0px;
+    }
+    }
   }
   
-  &__item:last-child {
-    margin-right: 0px;
-  }
+  
 
   &__content {
     padding: 30px;
@@ -37,18 +56,32 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
+
+    @media screen and (min-width:480px) {
+      letter-spacing: 0.03em;
+    }
   }
   
   &__text {
     font-size: 16px;
     line-height: 1.19;
+    
+    @media screen and (min-width:480px) {
+      letter-spacing: 0.03em;
+    }
+    
   }
 
   &__social {
+    
     display: flex;
   
     margin-top: 16px;
     margin-bottom: 0px;
+
+    @media screen and (min-width:480px) {
+      justify-content: center;
+    }
   }
   
   &__list {
