--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -1,7 +1,22 @@
 .section-team {
     background-color: var(--secondary-bg-color);
+
+    @media screen and (min-width:480px) {
+      padding-top: 60px;
+      padding-bottom: 60px; 
+    }
   }
 
   .section-team__title {
     @extend %title;
+
+    @media screen and (min-width:480px) {
+      font-size: 28px;
+      line-height: 1.18;
+      letter-spacing: 0.03em;
+
+      margin-top: 0px;
+      margin-bottom: 0px; 
+
+    }
   }
