--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -6,25 +6,107 @@
     top: 0px;
     position: fixed;
     transition: opacity 250ms var(--timing-function), visibility 250ms var(--timing-function);
+
+    @media screen and (min-width: 480px) {
+      overflow-y: scroll;
+    }
   }
   
+  // .mobile-modal {
+
+  //   @media screen and (min-width: 480px) {
+  //     width: 100%;
+  //     max-width: 480px;
+  //     padding: 10px 15px 48px 40px ;
+  //     background-color: var(--white-color);
+     
+  //   }
+
+  //   @media screen and (min-width: 767px) {
+  //     display: none;
+  //   }
+  // }
+
   .modal {
-    width: 528px;
-    height: 581px;
-    padding: 40px;
-  
-    background: var(--white-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-  
+    @media screen and (min-width: 767px) {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: transform 250ms var(--timing-function); 
+      background: var(--white-color);
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+      border-radius: 4px;
+    }
+    @media screen and (min-width: 1200px) {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: transform 250ms var(--timing-function); 
+      width: 528px;
+      height: 581px;
+      padding: 40px;
+    
+      background: var(--white-color);
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+      border-radius: 4px;
+    
+    }
+   
+   
+  }
+
+  .open-btn {
     position: absolute;
+    width: 40px;
+    height: 40px;
+    top: 10px;
+    right: 15px;
+
+    // & is-open .mobile-container {
+    //   display: block;
+    // }
+    
+    &__icon {
+      position: absolute;
+      width: 40px;
+      height: 40px;
+   
+  
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     transition: transform 250ms var(--timing-function);
+    fill: var(--color-accent);
+    }
+
+    & is-open .close-btn__element {
+      display: block;
+    }
+
+    & is-open .open-btn__element {
+      display: none;
+    }
+
+    
+
+  }
+  .open-btn__element {
+    width: 24px;
+    height: 16px;
   }
   
+  .close-btn__element {
+    display: none;
+
+    width: 18px;
+    height: 18px;
+  }
+
+
   .close-btn {
     position: absolute;
   
