--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,69 +5,133 @@ header {
     position: relative;
   }
     .header-nav {
+
+      @media screen and (min-width: 480px) {
+        display: block;
+      }
+
+      @media screen and (max-width: 767px) {
        display: flex;
+      width: 100%;
+      align-items: center;
+      min-height: 60px;
+      }
     }
+
+
     
+    // -webkit-box-pack: justify;
+    // -ms-flex-pack: justify;
+    // justify-content: space-between;
+
+    // display: -webkit-box;
+    // display: -ms-flexbox;
+    // display: flex;
+    // -webkit-box-align: center;
+    // -ms-flex-align: center;
+   
   
   .header-nav__item {
+    position: relative;
     display: flex;
   
-    align-items: center;
-  }
+     align-items: center;
+   }
 
 
   .site-nav {
-   display: flex;
- 
-  
-  &__item {
-     margin-right: 50px;
-    width: auto;
-  }
-  
-  &__item:last-child {
-    margin-right: 0px;
-  }
+
+    @media screen and (max-width: 767px) {
+      position: absolute;
+      top:0;
+      left: 0;
+
+      font-weight: 500;
+      font-size: 40px;
+      line-height: 1.175;
+      letter-spacing: 0.02em;
+    }
+
+    @media screen and (min-width: 768px) {
+      display: flex;
+
+      .site-nav__item {
+        margin-right: 50px;
+       width: auto;
+     }
+     
+     .site-nav__item:last-child {
+       margin-right: 0px;
+     }
+
+    }
+
+    .site-nav__link {
+      @media screen and (max-width: 767px){
+        padding-top: 0;
+      }
+    }
+   
 
   &__link--current {
     position: relative;
     color: var(--color-accent);
   }
   
-  &__link--current::after {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 4px;
-    background: var(--color-accent);
-    border-radius: 2px;
-    bottom: 0;
-    left: 0;
-  }
-  }
+  // &__link--current::after {
+  //   position: absolute;
+  //   content: '';
+  //   width: 100%;
+  //   height: 4px;
+  //   background: var(--color-accent);
+  //   border-radius: 2px;
+  //   bottom: 0;
+  //   left: 0;
+  // }
+   }
   
   .adr-nav {
+
+     @media screen and (max-width: 767px) {
+      display: none;
+    }
+
+    @media screen and (min-width: 768px) {
      display: flex;
      margin-left: auto;
      align-items: flex-end;
+    }
   }
   
+  @media screen and (min-width: 768px) {
    .adr-nav__list:not(:last-child) {
      margin-right: 50px;
    }
-  
+  }
+
   .adr-nav__icon {
-     position: relative;
+
+    @media screen and (min-width: 480px) {
+      display: none;
+    }
+
+    @media screen and (min-width: 768px) {
+      position: relative;
      top: 3px;
      margin-right: 10px;
      width: 16px;
      height: 16px;
+    }
+     
   }
   
   .adr-nav__icon-envelope {
+   
+    @media screen and (min-width: 768px) {
      display: inline-block;
      width: 16px;
      height: 12px;
+    }
   }
   
   .adr-nav__icon-telefon {
