--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import './base/reset';
 @import './base/common';
 @import './components/container';
+@import './components/mobile-container';
 @import './components/logo';
 @import './components/link';
 @import './components/section';
