--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import './components/mobile-container';
 @import './components/logo';
 @import './components/link';
+@import './components/_header__mobile-social';
 @import './components/section';
 @import './components/placeholders';
 @import './components/buttons';
