--- a/scss/components/_mobile-container.scss
+++ b/scss/components/_mobile-container.scss
@@ -1,5 +1,5 @@
 .mobile-container {
-    display: none;
+    // display: none;
     @media screen and (max-width: 767px) {
     position: absolute;
     top: 0;
