--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -171,7 +171,7 @@ header {
 
         padding-bottom: 0; 
 
-        color: var(--color-accent);
+        // color: var(--color-accent);
       }
     }
 
