--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -10,9 +10,9 @@ html {
     letter-spacing: 0.03em;
   }
 
-  body .modal-open {
-    overflow: hidden;
-  }
+  // body .modal-open {
+  //   overflow: hidden;
+  // }
 
   
   
