--- a/css/main.css
+++ b/css/main.css
@@ -83,10 +83,6 @@ body {
   letter-spacing: 0.03em;
 }
 
-body .modal-open {
-  overflow: hidden;
-}
-
 .container {
   padding-left: 15px;
   padding-right: 15px;
@@ -123,6 +119,7 @@ body .modal-open {
     background-color: var(--white-color);
     text-align: left;
     padding: 48px 40px;
+    z-index: 2;
   }
 }
 .mobile-container.is-open {
@@ -168,7 +165,18 @@ body .modal-open {
   display: block;
   margin-bottom: 20px;
   margin-right: 0;
-  width: 145px;
+}
+@media screen and (min-width: 480px) {
+  .footer__logo {
+    width: 154px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__logo {
+    width: 145px;
+  }
 }
 
 .link {
@@ -295,9 +303,19 @@ body .modal-open {
 .subscription {
   display: block;
   position: relative;
-  width: 570px;
-  height: 86px;
-  margin-left: 93px;
+}
+@media screen and (min-width: 320px) {
+  .subscription {
+    width: 450px;
+    height: 156px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscription {
+    width: 570px;
+    height: 86px;
+    margin-left: 93px;
+  }
 }
 .subscription__title {
   font-size: 14px;
@@ -307,6 +325,11 @@ body .modal-open {
   color: var(--white-color);
   margin-top: 0;
   margin-bottom: 20px;
+}
+@media screen and (min-width: 320px) {
+  .subscription__title {
+    text-align: center;
+  }
 }
 .subscription__label {
   display: block;
@@ -320,8 +343,12 @@ body .modal-open {
   color: rgba(255, 255, 255, 0.6);
   transition: transform 250ms var(--timing-function);
 }
+@media screen and (min-width: 320px) {
+  .subscription__label {
+    top: 40%;
+  }
+}
 .subscription__input {
-  width: 358px;
   height: 50px;
   padding: 15px 16px;
   background: var(--color-fon);
@@ -330,6 +357,16 @@ body .modal-open {
   border-radius: 4px;
   color: var(--white-color);
   outline: none;
+}
+@media screen and (min-width: 320px) {
+  .subscription__input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscription__input {
+    width: 358px;
+  }
 }
 .subscription__input:not(:-moz-placeholder-shown) + .subscription__label {
   transform: translateY(35px);
@@ -345,7 +382,6 @@ body .modal-open {
 }
 
 .footer-submit {
-  position: absolute;
   width: 200px;
   height: 50px;
   padding: 10px 28px;
@@ -365,6 +401,18 @@ body .modal-open {
   border-radius: 4px;
   border: none;
   transition: color 250ms var(--timing-function);
+}
+@media screen and (min-width: 320px) {
+  .footer-submit {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-submit {
+    position: absolute;
+  }
 }
 .footer-submit:hover, .footer-submit:focus {
   color: var(--button-primary-focus);
@@ -394,6 +442,7 @@ body .modal-open {
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 40px;
   transform: translate(-50%, -50%);
   transition: transform 250ms var(--timing-function);
   background: var(--white-color);
@@ -409,7 +458,6 @@ body .modal-open {
   .modal {
     width: 528px;
     height: 581px;
-    padding: 40px;
   }
 }
 
@@ -439,22 +487,27 @@ body .modal-open {
   transition: transform 250ms var(--timing-function);
   fill: var(--color-accent);
 }
-.open-btn.is-open .open-btn__close-element {
+
+.open-btn.is-open .close-element {
   display: block;
 }
-.open-btn.is-open .open-btn__element {
+
+.open-btn.is-open .open-element {
   display: none;
 }
 
-.open-btn__element {
+.open-element {
+  display: block;
   width: 24px;
   height: 16px;
+  align-items: center;
 }
 
-.open-btn__close-element {
+.close-element {
   display: none;
   width: 18px;
   height: 18px;
+  align-items: center;
 }
 
 .close-btn {
@@ -487,11 +540,21 @@ body .modal-open {
 
 .form__title {
   font-size: 20px;
-  line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
   margin-bottom: 12px;
+}
+@media screen and (max-width: 1199px) {
+  .form__title {
+    font-weight: 700;
+    line-height: 1.5;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .form__title {
+    line-height: 1.15;
+  }
 }
 
 .form__label {
@@ -567,10 +630,20 @@ body .modal-open {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
   letter-spacing: 0.03em;
   margin-top: 20px;
+}
+@media screen and (min-width: 480px) {
+  .checkbox-field {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .checkbox-field {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .checkbox-field__input {
   width: 1px;
@@ -902,6 +975,11 @@ header {
   margin-left: auto;
   margin-right: auto;
 }
+@media screen and (min-width: 480px) {
+  .hero {
+    max-width: 479px;
+  }
+}
 .hero__title {
   color: var(--white-color);
   font-weight: 900;
@@ -1059,17 +1137,48 @@ header {
   }
 }
 
+@media screen and (min-width: 320px) {
+  .client {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .client__title {
+    font-size: 28px;
+    letter-spacing: 0.03em;
+    margin-bottom: 30px;
+  }
+}
+
 .our-client {
   display: flex;
-  margin-right: auto;
-  margin-top: auto;
+  flex-wrap: wrap;
+}
+@media screen and (min-width: 320px) {
+  .our-client {
+    justify-content: center;
+  }
 }
 .our-client__card {
   margin-right: 30px;
   margin-top: 0px;
 }
+@media screen and (min-width: 320px) {
+  .our-client__card {
+    margin-bottom: 30px;
+  }
+}
 .our-client:last-child {
-  margin-right: 0px;
+  margin-right: 0;
+  margin-bottom: 0;
 }
 .our-client__link {
   display: flex;
@@ -1104,8 +1213,28 @@ header {
   display: flex;
   align-items: baseline;
 }
+@media screen and (min-width: 480px) {
+  .footer__info {
+    flex-wrap: wrap;
+    justify-content: center;
+    -moz-column-gap: 165px;
+         column-gap: 165px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__info {
+    display: flex;
+    align-items: baseline;
+  }
+}
 .footer-contact {
   width: 231px;
+}
+@media screen and (min-width: 480px) {
+  .footer-contact {
+    text-align: center;
+    margin-bottom: 60px;
+  }
 }
 .footer-link {
   display: flex;
@@ -1120,7 +1249,12 @@ header {
   display: block;
   width: 231px;
 }
-
+@media screen and (min-width: 480px) {
+  .footer-adr .footer-adr {
+    text-align: center;
+    margin-bottom: 60px;
+  }
+}
 .social__page--white {
   fill: var(--white-color);
 }
@@ -1152,7 +1286,17 @@ header {
 
 .inviting {
   width: 206px;
-  margin-left: 70px;
+}
+@media screen and (min-width: 480px) {
+  .inviting {
+    margin-left: 0;
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .inviting {
+    margin-left: 70px;
+  }
 }
 .inviting__network {
   display: flex;
@@ -1172,6 +1316,11 @@ header {
   text-transform: uppercase;
   color: var(--white-color);
   margin-top: 0px;
+}
+@media screen and (min-width: 480px) {
+  .inviting__title {
+    text-align: center;
+  }
 }
 
 .portfolio-menu {
