--- a/scss/components/_checkbox.scss
+++ b/scss/components/_checkbox.scss
@@ -2,13 +2,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    font-size: 14px;
-    line-height: 1.71;
     letter-spacing: 0.03em;
-
     margin-top: 20px;
-  
+
+    @media screen and (min-width: 480px) {
+      font-size: 12px;
+      line-height: 1.17;
+    }
+      
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      line-height: 1.71;
+    }
   
   &__input {
    
