--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,11 +1,20 @@
 .form__title {
-  
-    font-size: 20px;
+  font-size: 20px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+  margin-bottom: 12px;
+
+  @media screen and (max-width: 1199px) {
+    font-weight: 700;
+    line-height: 1.5;
+  }
+
+
+  @media screen and (min-width: 1200px) {
     line-height: 1.15;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--title-text-color);
-    margin-bottom: 12px;
+  }
+  
   }
   
   .form__label {
