--- a/scss/layout/_client.scss
+++ b/scss/layout/_client.scss
@@ -1,20 +1,47 @@
+.client {
+
+  @media screen and (min-width: 320px){
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px
+  }
+}
+
 .client__title {
   @extend %title;
+
+  @media screen and (max-width: 1199px) {
+    font-size: 28px;
+    letter-spacing: 0.03em;
+    margin-bottom: 30px;
+  }
+   
 }
 
 .our-client {
     display: flex;
-    margin-right: auto;
-    margin-top: auto;
-  
+    flex-wrap: wrap;
+    // margin-right: auto;
+    // margin-top: auto;
+    @media screen and (min-width: 320px){
+      justify-content: center;
+    }
+        
   
   &__card {
     margin-right: 30px;
     margin-top: 0px;
+    @media screen and (min-width: 320px) {
+      margin-bottom: 30px;
+    }
   }
   
   &:last-child {
-    margin-right: 0px;
+    margin-right: 0;
+    margin-bottom: 0;
   }
   
   &__link {
