--- a/scss/components/_section.scss
+++ b/scss/components/_section.scss
@@ -2,3 +2,8 @@
     padding-top: 94px;
     padding-bottom: 94px;
   }
+
+  .portfolio-section {
+    padding-top: 60px;
+      padding-bottom: 60px;
+  }
