--- a/scss/layout/_portfolio-card.scss
+++ b/scss/layout/_portfolio-card.scss
@@ -1,23 +1,47 @@
 .portfolio-card {
     margin-top: 50px;
+    @media screen and (min-width: 320px) {
+      margin-top: 25px;
+    }
   }
 
   .propose {
-    display: flex;
     padding: 0;
     margin: 0;
     list-style: none;
-  
-    flex-wrap: wrap;
-  
-    margin-right: -30px;
-    margin-bottom: -30px;
+    @media screen and (min-width: 320px) {
+      display: block;
+    }
+
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      flex-wrap: wrap;
+    
+      margin-right: -30px;
+      margin-bottom: -30px;
+    }
+    
 
  &__list {
-    margin-right: 30px;
     margin-bottom: 30px;
     border: 1px solid #eeeeee;
-    flex-basis: calc((100% - 90px) / 3);
+
+    @media screen and (min-width: 320px) {
+      margin-right: 0;
+    }
+
+    @media screen and (min-width: 768px) {
+        
+        flex-basis: calc((100% - 60px) / 2);
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+      flex-basis: calc((100% - 90px) / 3);
+    }
+    
+  
   }
 
  &__link {
